static/estilo2.css
*{box-sizing:border-box;}
body{
  font-family:Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
  background-color:#2e4054;
  color: #bed2e0;
  margin:0;
}
h3{
  font-family: Georgia, 'Times New Roman', Times, serif;
  padding-top: 10px;
}
section ul{
  padding-left: 25px;
  list-style-type:square;
  line-height: 1.3;
}
section h2{
  border-bottom: #cc274c 1px solid;
}
p{line-height: 1.5;}
div a{
  font-weight: bold;
}
.no-padding{padding: 0px;}
.no-border{border:0px;}
.no-margin{margin: 0;}
.centered{text-align: center;}
.header{padding:20px;text-align:center;}
.sticky{
  display: block;
  width: auto;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  background-color: #cc274c;
  color: whitesmoke;
}
.half{
  width: 40%;
  padding: 0px 0px 0px 10px;
  border: 0px;  
}
.counter{
  width: 60%;
  padding: 0px 10px 0px 0px;
  border: 0px;
}
#zenith{
  text-align: right;
  font-size: large;
  font-weight:300;
  padding: 0px;
  font-family: Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
}
.top-text{
  font-size: small;
  margin-top: -18px;
}
nav.top-menu{
  display: block;
  width: 100%;
  box-sizing: inherit;
  text-align: center;
  padding-top: 1rem;
  padding-bottom: 1rem;
}
a{text-decoration: none;color: #bed2e0;}
.navlink{
  position:relative;
  padding-left: 1rem;
  padding-right: 1rem;
  font-size: 1rem;
}
.navlink-off,.navlink-on{position:relative}
.navlink-off:after,.navlink-on:after{content:" ";display:block;margin:.125rem auto 0;width:0;height:.125rem;border-radius:.125rem;background:rgba(255,255,255,0);pointer-events:none;transition:all .4s ease}
.navlink-off:hover:after{width:100%;background:#bed2e0;}
.navlink-on:after{width:100%;background:#bed2e0;}
.inline-block{
  display: inline-block;
  vertical-align: top;
}

ul{list-style-type: none;}
ul, li{margin: 0px;padding:5px}
.large{font-size: 40px;font-weight: 200;}
/*#curr_weather{background-image: url('assets/cloud-heavy.svg');}*/
#weather_details, #curr_weather, #currDate{
  background-color:#bed2e030;
}
#currDate h3{margin-top: 0px;}
.col4{
  width:25%;
  float: left;
  text-align: center;
}
#weather_details .column3{height: 220px;padding:25px;}
.column3{
  width: 33.3%;
  border:0;
  text-align: center;
}
.column3 p{font-size: medium;}
/*2 columns*/
.column,.col-date{
  width: 50%;border:0px;text-align: center;
}
.column80{width:80%;}
.column20{width:20%;}
.column-left{width: 8%;}
.column-right{width: 84%;}
.column-third{width: 8%;}
.float-left{float: left;}
.outer{
  width: 100%;
  height: 480px;
  overflow-y: hidden;
}
.inner{width: 100%;height: 480px;}
#mainPlot{
  display:block;padding: 0px;
  width: 100%;height: 100%;}
.row{text-align:center;}
.row:after{
  content:"";
  display:table;
  clear:both;
}
.align-left{text-align: left;}
.align-right{text-align: right;}
.bottom-left{
  border:0px;
  position:absolute;
  top:50%;/*8px;*/
  left:50%;/*16px;*/
  transform:translate(-50%,-50%);
}
#forecaster .row{
  /*border-bottom: 1px dashed #bed2e0;*/
  background-color: #bed2e040;
  margin-bottom: 8px;
  border-radius: 8px;
}
.row-date{
  /*margin: 0;
  does NOT center items
  display: flex;
  align-items: center;
  justify-content: center;*/
  background: none;
  margin-top: 10px;
}
#forecaster .row p, #forecaster .row h2{margin: 0;}

panel2,.flip{
  font-size:16px;
  padding:10px;
  text-align:center;
  background-color:#2e4054;
  color:whitesmoke;
  border:solid 1px #cc274c;
  margin:auto;
}
#panel2{display:none;}

.clearfix::after{
  content:"";
  clear:both;
  display:table;
}
.clearfix{padding: 10px;}
/*SVG*//*.highlight{fill: #cc274c;}*/
/*.bar{fill:#bed2e030}*/
svg g{color:#bed2e0;}
.domain, svg line{stroke: #bed2e0;}
svg text{fill:#bed2e0;font-size: 12px;}
.txtTemp,.txtWind{fill:whitesmoke;}
.tempAxis text{fill:#cc274c;}

.progress-ring-circle {
  transform: rotate(-90deg);
  transform-origin: 50% 50%;
}
.value {
  position: relative;
  bottom: 150px;
  left: 0px;
  color: #bed2e0;
  text-align: center;
  border: 0px;
}
/*Table schedule*/
#myday{
  border-collapse:collapse;
  width:100%;
}
#myday td,#myday th{
  border:1px dashed #98a2a9;
  padding:10px;
  text-align:left;
  background-color:#2e4054;
  color:#bed2e0;
}
#myday tr:nth-child(even){background-color:#f2f2f2;}
#myday tr:hover{background-color:#ddd;}
/*table cols title*/
.accordion{
  color:#bed2e0;
  cursor:pointer;
  padding:18px;
  width:100%;
  border:none;
  outline:none;
  font-size:18px;
  transition:0.4s;
}
.accordion:after{
  content:'\02193';/*Down*/
  color:#bed2e0;
  font-size: x-large;
  /*'\02795'; background-color: #bed2e0;*/
  float:right;margin-left:5px;
}
.active:after{
  content:'\02191';/*Up*/
  color:#bed2e0;
  font-size: x-large;
  /*content:"\02796";background-color: #bed2e0;*/}
.panel{
  display:none;
  background-color:#e5e5e5;
  overflow:hidden;
}
button{
background-color:#2e4054;
color:white;
text-align:center;
}
.mySNS{padding:5px;}
.copy-left{
  display:inline-block;
  text-align:right;
  -moz-transform:scaleX(-1);
  -o-transform:scaleX(-1);
  -webkit-transform:scaleX(-1);
  transform:scaleX(-1);
  filter:FlipH;-ms-filter:"FlipH";
}
#nav-menu{display: none;}
/*Responsive layout to stack cols on top of each other
@media only screen and (max-width:620px){*/
@media (max-width:620px){
  .header{padding: 0px;}
  .header img{margin:0;width: 40vh;
    /*src: url("https://sdo.gsfc.nasa.gov/assets/img/latest/latest_256_0171.jpg");*/}
  .sticky{position: inherit;}
  .column,.column80,.column20{
    width:100%;
    /*text-align: justify;*/
  }
  #nav-menu{display: block;}
  nav.menu{
    bottom:0;
    position: -webkit-sticky;
    position: sticky;
    height: 56px;
    z-index: 2000;
    background-color: #bed2e0;
  }
  nav.menu ul{  
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
  }
  
  nav.menu ul li a{
    display: inline-flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    font-size: .8rem;
  }
  .link-on{color: #cc274c;}
  .link-off{color: #2e4054;}
  nav.menu ul li{flex: 1;}
  nav.menu ul li a img{width: 1.15rem;height: 1.15rem;}

  .outer{width: 320px;  overflow-x: auto;  }
  .large{font-size: 40px;}
  .middle{font-size: 20px;}
  .column-left{margin: 0px 0px 0px -5px;}
  .column-third{margin: 0px -35px 0px 0px;}
  #weather_details .column3{padding: 0px;}
  .column4{width: 50%;}
  #zenith{font-size: large;}
  .align-left,.align-right{text-align: center;}
  .hidden{display: none;}
  section ul{
    padding-left: 0px;
    list-style-type:none;
  }
  .top-menu{display: none;}
  #forecaster img{height: 48px;}
  #foreDiv div{border-bottom: 1px dashed #bed2e040;}
}
/*@media (max-width:360px){
  .outer{width: 280px;  overflow-x: auto;  }
}*/

